# RiceBot

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  RiceBot.js  RiceBot.py  auth.json  botsList.json  chatbot.py  inference.sh  jsconfig.json  noIntroUsers.json  package-lock.json  package.json  ricebotsettings.json  run.sh  rustfmt.toml  start.sh  suppressedUsers.json  userDB.json  usertracks.json
OLD/: RiceBot.js  package-lock.json  package.json  usertracks.json
src/: RiceBot.js  admins.json  chat.sh  chatbot.py  deploy-commands.js  main.rs  ricechat.sh  tracks.json
src/commands/: getAdmins.js  getadmins.js  marco.js
src/events/: interactionCreate.js  ready.js  voiceStateUpdate.js
