[package]
name = "rice_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
regex = "1"

[dependencies.serenity]
default-features = true
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.12"
